--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://khushboopandit.github.io/Ads/",
+  "homepage": "https://khushboopandit.github.io/Dettol-Ads/",
   "name": "ads",
   "version": "0.1.0",
   "private": true,
